syntax = "proto3";

package authz;

message GrantList {  
  repeated Grant grants = 1;
}

message Grant {
  string guard_type = 1;
  bytes guard_data = 2; 
  string policy = 3;
  string created_at = 4;
  bool protected = 5;
}


